Разметка для Booking

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
         <nav>
             <ul>
-<li><a href="#">Home</a></li>
+<li><a href="./index.html">Home</a></li>
 <li><a href="#">the hut</a></li>
 <li><a href="#">The area</a></li>
-<li><a href="#">booking</a></li>
+<li><a href="./booking.html">booking</a></li>
 <li><a href="#">about us</a></li>
 <li><a href="#">faq</a></li>
 
@@ -159,16 +159,14 @@ old trees that go through the entire cottage from floor to ceiling.</p>
 <p>Newsletter</p>
 
 <!-- <form action=""></form> -->
-<p>© 2021 The Glass Huts</p>
+<p>&copy; 2021 The Glass Huts</p>
 
-<nav>
 <ul>
     <li><a href="#">TERMS AND CONDITIONS</a></li>
     <li><a href="#">CENCELLATION POLICY</a></li>
     <li><a href="#">PRIVACY POLICY</a></li>
 </ul>
     
-</nav>
 <ul>
     <li>
         <svg>
