--- a/booking.html
+++ b/booking.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Handlee&family=Mulish&family=Open+Sans:ital,wght@0,300;0,400;0,600;1,300;1,400&display=swap"
+        rel="stylesheet">
 </head>
 <body>
     <header>
@@ -28,7 +34,7 @@
                 <use xlink:href="./images/denmark.svg"></use>
             </svg> -->
     
-        <button>Book Now</button>
+        <button type="button" class="button-book">Book Now</button>
     </header>
 
 
@@ -83,28 +89,32 @@
             <li><a href="#">PRIVACY POLICY</a></li>
         </ul>
     
-        <ul>
-            <li>
-                <svg>
-                    <use xlink:href="./images/paypal-logo 1.svg"></use>
-                </svg>
-            </li>
-            <li>
-                <svg>
-                    <use xlink:href="./images/master_card.svg"></use>
-                </svg>
-            </li>
-            <li>
-                <svg>
-                    <use xlink:href="./images/visa.svg"></use>
-                </svg>
-            </li>
-            <li>
-                <svg>
-                    <use xlink:href="./images/bank_transfer.svg"></use>
-                </svg>
-            </li>
-        </ul>
+    <ul>
+        <li>
+            <!-- <svg>
+                <use xlink:href="./images/paypal-logo 1.svg"></use>
+            </svg> -->
+            Pay Pal
+        </li>
+        <li>
+            <!-- <svg>
+                <use xlink:href="./images/master_card.svg"></use>
+            </svg> -->
+            Master Card
+        </li>
+        <li>
+            <!-- <svg>
+                <use xlink:href="./images/visa.svg"></use>
+            </svg> -->
+            Visa
+        </li>
+        <li>
+            <!-- <svg>
+                <use xlink:href="./images/bank_transfer.svg"></use>
+            </svg> -->
+            Bank Transfer
+        </li>
+    </ul>
     </footer>
 </body>
 </html>
